<resources>

    <string name="app_name">Living Postcards</string>
    <string name="title_activity_camera">New Postcard</string>
    <string name="gallery">Gallery</string>
    <string name="help">Help</string>
    <string name="done">Done</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="new_postcard">New Postcard</string>
    <string name="add_images">Add photo</string>
    <string name="welcome_message_no_account">Welcome to Living Postcards. To continue, please sign in or create an account.</string>
    <string name="login_or_create_account">Login or Create Account</string>
    <string name="send_intent_message">Check out this Living Postcard %1$s</string>
    <string name="send_intent_subject">Living Postcard: %1$s</string>
    <string name="err_share_intent_no_web_url_editable">Postcard must be published before it can be shared. Publishing is done from the edit screen.</string>
    <string name="send_intent_chooser_title">Send Postcard</string>
    <string name="notice_publish_success">Your postcard will begin uploading immediately. Check your notification area.</string>
    <string name="err_publish_fail">There was an error marking your card for publishing.</string>
    <string name="edit_postcard">Edit Postcard</string>
    <string name="postcard_edit_title_hint">Postcard Title</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="main_tab_whats_new">What\'s new</string>
    <string name="main_tab_my_postcards">My Postcards</string>
    <string name="main_tab_unpublished">Unpublished</string>
    <string name="postcard_edit_description_hint">Description</string>
    <string name="publish_postcard">Publish Postcard</string>
    <string name="save_postcard">Save Postcard</string>
    <string name="publish_postcard_condensed">Publish</string>
    <string name="save_postcard_condensed">Save</string>
    <string name="postcard_edit_title_empty">Please enter a title</string>
    <string name="postcard_edit_delete_confirm_message">Are you sure you want to delete this card?</string>
    <string name="delete_postcard">Delete postcard</string>
    <string name="err_initializing_camera">Error initializing camera</string>
	<string name="untitled"><i>Untitled</i></string>
	<string name="err_postcard_media_could_not_download">Error loading postcard: %1$s</string>
	<string name="retry">Retry</string>
	<string name="err_no_data_connection">No data connection.</string>
	<string name="err_camera_take_picture_failed">Sorry, there was an error while saving the photo. Please try again.</string>
	<string name="delete_postcard_image">Delete postcard image</string>
	<string name="delete_postcard_image_confirm_message">Are you sure you want to delete this image from the postcard?</string>
	<string name="geocoder_lookup_unknown_location">unknown location</string>
	<string name="make_collaborative">Make collaborative</string>
	<string name="delete_photos">Delete photos</string>
	<string name="make_collaborative_feature_description">This will allow anyone to contribute a photo to this postcard. As the creator of the postcard, you can moderate the added photos. You can undo this until someone other than you adds a photo.</string>
	<string name="notice_cannot_make_card_personal">Cannot make card personal: card contains photos by other authors. You can delete them to change this.</string>
	<string name="notice_make_card_personal_success">You are now the only person who can add photos to this card.</string>
	<string name="notice_make_collaborative_success">Anyone can now add a photo to this postcard. As the creator, you can moderate them.</string>
	<string name="take_picture">Take picture</string>
	<string name="main_tab_nearby">Nearby</string>
</resources>
