<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/save_postcard"
        android:titleCondensed="@string/save_postcard_condensed"
        android:showAsAction="always|withText"
        android:visible="false"
        />
    <item
        android:id="@+id/publish"
        android:icon="@android:drawable/ic_menu_send"
        android:showAsAction="always|withText"
        android:title="@string/publish_postcard"
        android:titleCondensed="@string/publish_postcard_condensed"/>

    <item
        android:id="@+id/delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom"
        android:title="@string/delete"/>

</menu>